<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Chăm sóc sức khỏe</string>
    <string name="todo_action_home">Quay về trang chủ</string>
    <string name="todo_action_setting">Mở cài đặt</string>
    <string name="title_menu">Trang chủ</string>
    <string name="hint_hello">Mừng bạn quay lại</string>
    <string name="hint_password">Nhập mật khẩu</string>
    <string name="hint_username">Nhập tên tài khoản</string>
    <string name="button_verify">Xác nhận</string>
    <string name="title_personal">Cá nhân</string>
    <string name="card_user">Thông tin người dùng</string>
    <string name="card_gender">Giới tính</string>
    <string name="male_gender">Nam</string>
    <string name="female_gender">Nữ</string>
    <string name="button_backtoapp">Trở về ứng dụng</string>
    <string name="toast_testing">Chức năng này chưa khả dụng</string>
    <string name="button_news">Tin tức</string>
    <string name="button_smartwatch">Đồng hồ thông minh</string>
    <string name="button_doctor">Liên hệ bác sĩ</string>
    <string name="button_heart">Sức khỏe tim mạch</string>
    <string name="button_breath">Sức khỏe hơi thở</string>
    <string name="button_BMI">Chỉ số khối cơ thể</string>
    <string name="button_calories">Giám sát calo</string>
    <string name="button_food">Giám sát ăn uống</string>
    <string name="button_exercise">Giám sát tập luyện</string>
    <string name="button_sleep">Chất lượng giấc ngủ</string>
    <string name="button_phone">Sử dụng điện thoại</string>
    <string name="button_period">Chu kỳ kinh nguyệt</string>
    <string name="toast_not_select_fail">Lỗi: Bạn phải chọn dữ liệu trước</string>
    <string name="evaluate_fail">Lỗi: Dữ liệu không hợp lệ</string>
    <string name="toast_fail">Lỗi: Có gì đó không ổn</string>
    <string name="toast_delete_fail_not_select">Lỗi: Bạn phải chọn một mục</string>
    <string name="toast_success">"Thành công: "</string>
    <string name="dialog_evaluate_one">Đánh giá trị số dữ liệu</string>
    <string name="dialog_okay">OK</string>
    <string name="form_title_add">Thêm mẫu</string>
    <string name="form_title_edit">Sửa mẫu</string>
    <string name="button_save">Lưu</string>
    <string name="button_changegraph">Đổi biểu đồ</string>
    <string name="button_edit">Chỉnh sửa</string>
    <string name="button_stopedit">Ngưng chỉnh sửa</string>
    <string name="button_delete">Xóa</string>
    <string name="button_evaluate">Đánh giá</string>
    <string name="button_statistics">Thống kê</string>
    <string name="header_item1">Vật 1</string>
    <string name="header_item2">Vật 2</string>
    <string name="header_item3">Vật 3</string>
    <string name="hint_item1">Ẩn vật 1</string>
    <string name="hint_item2">Ẩn vật 2</string>
    <string name="hint_item3">Ẩn vật 3</string>
    <string name="title_form">Mẫu</string>
    <string name="title_list">Danh sách</string>
    <string name="title_graph">Đồ thị</string>
    <string name="header_date_create">Ngày tạo</string>
    <string name="header_heart_rate">Nhịp tim</string>
    <string name="header_heart_pressure">Huyết áp</string>
    <string name="header_breath_hold">Nín thở</string>
    <string name="header_calories_in">Calo nạp</string>
    <string name="header_calories_out">Calo đốt</string>
    <string name="header_sleep_time">Thời gian ngủ</string>
    <string name="header_wake_up_time">Thời gian dậy</string>
    <string name="header_period_start">Bắt đầu kỳ kinh</string>
    <string name="header_height">Chiều cao</string>
    <string name="header_weight">Cân nặng</string>
    <string name="header_phone_use">Đã sử dụng</string>
    <string name="hint_blank">trống</string>
    <string name="date_now">Bây giờ</string>
    <string name="hint_empty">trống</string>
    <string name="hint_day">Ngày</string>
    <string name="hint_date">Ngày</string>
    <string name="hint_datetime">Ngày giờ</string>
    <string name="hint_BPM">BPM</string>
    <string name="hint_mmHg">mmHg</string>
    <string name="hint_s">s</string>
    <string name="hint_h">s</string>
    <string name="hint_kg">kg</string>
    <string name="hint_cm">cm</string>
    <string name="hint_kcal">kcal</string>
    <string name="evaluate_heart_pressure_very_bad_h">Huyết áp cực cao: báo ngay với người thân, liên lạc với cơ sở y tế gần nhất để được hỗ trợ</string>
    <string name="evaluate_heart_pressure_bad_h2">Tăng huyết áp giai đoạn 2: tình trạng có thể sẽ nặng hơn bất cứ lúc nào, nên nhờ bác sĩ cho dùng thuốc lợi tiểu kết hợp với thuốc hạ huyết áp</string>
    <string name="evaluate_heart_pressure_bad_h1">Tăng huyết áp giai đoạn 1: bác sĩ có thể cho bạn dùng thuốc lợi tiểu để hạn huyết áp và bạn cần điều chỉnh chế độ sinh hoạt, thường xuyên kiểm soát huyết áp của mình</string>
    <string name="evaluate_heart_pressure_warning_h">Cảnh báo huyết áp cao: nên nằm nghỉ ngơi tại chỗ, hít thở sâu, thả lỏng cơ thể, không bổ sung thêm đường, không ăn mặn, không sử dụng chất kích thích</string>
    <string name="evaluate_heart_pressure_good">Huyết áp ổn: bạn cứ duy trì nhịp sống như vậy</string>
    <string name="evaluate_heart_pressure_very_good">Huyết áp rất tốt: bạn cứ duy trì nhịp sống như vậy</string>
    <string name="evaluate_heart_pressure_warning_l">Huyết áp thấp: hạn chế uống rượu và tăng cường uống nước, kiểm soát lượng muối của cơ thể, tránh tắm nước nóng hoặc xông hơi</string>
    <string name="evaluate_heart_pressure_bad_l">Huyết áp cực thấp: liên hệ ngay với các trung tâm y tế gần nhất để được chữa trị</string>
    <string name="evaluate_impossible">Vô lý: Dữ liệu bạn nhập vào khá mơ hồ và không thể nào xảy ra trường hợp như vậy</string>
    <string name="evaluate_heart_rate_bad_h">Nhịp tim cao: hãy tránh vận động mạnh và cố gắng thở đều</string>
    <string name="evaluate_heart_rate_warning_h">Cảnh báo nhịp tim cao: hãy từ bỏ những thói quen xấu như hút thuốc, rượu bia, sử dụng các chất kích thích và hãy uống đủ nước nhé</string>
    <string name="evaluate_heart_rate_normal">Nhịp tim bình thường: bạn đang khỏe mạnh</string>
    <string name="evaluate_heart_rate_good">Nhịp tim tốt: bạn đang khỏe mạnh</string>
    <string name="evaluate_heart_rate_warning_l">Cảnh báo nhịp tim thấp: nhịp tim của bạn có dấu hiệu chậm lại, bạn nên bỏ thuốc lá, giảm ăn mặn, hạn chế đồ dầu mỡ, ăn nhiều rau</string>
    <string name="evaluate_heart_rate_bad_l">Nhịp tim thấp: bạn nên liên hệ bác sĩ để xin thuốc, gọi người thân để hỗ trợ</string>
    <string name="evaluate_breath_very_good">Rất tốt: bạn có lá phổi của một vận động viên, cứ tập luyện đều nhé</string>
    <string name="evaluate_breath_good">Tốt: phổi của bạn chịu được áp lực khá tốt, duy trì tập luyện nhé</string>
    <string name="evaluate_breath_normal">Bình thường: phổi của bạn như bao người khác, bạn nên tập thể dục nhiều hơn để có thể lực tốt</string>
    <string name="evaluate_breath_bad">Thấp: bạn gặp chút rắc rối với lá phổi của mình, có thể do cơ địa nhưng bạn nên thử những bài thể dục yêu cầu thể lực như chạy bộ, bơi lội hoặc hít xà</string>
    <string name="evaluate_breath_very_bad">Rất tệ: bạn đang có vấn đề với lá phổi, nếu thấy khó chịu trong việc thở hãy liên hệ bác sĩ ngay, hoặc có thể do bạn đang thiếu oxi do hoạt động mạnh</string>
    <string name="evaluate_bmi_very_bad_h">Béo phì cấp 3: bạn nên đến trung tâm y tế để điều trị ngay, tình trạng của bạn rất tệ</string>
    <string name="evaluate_bmi_bad_h2">Béo phì cấp 2: hãy thận trọng trong ăn uống vì bạn rất có thể sẽ bị gan nhiễm mỡ, huyết áp cao, tiểu đường</string>
    <string name="evaluate_bmi_bad_h1">Béo phì cấp 1: bạn chưa phải ở trạng thái nguy hiểm nhưng cũng phải cảnh giác trong ăn uống và nên xây dựng lịch tập thể dục giảm mỡ thừa</string>
    <string name="evaluate_bmi_warning_h">Thừa cân: bạn nên cân nhắc bỏ thêm thời gian tập luyện thể dục thể thao và xây dựng chế độ ăn kiêng hợp lý</string>
    <string name="evaluate_bmi_normal">Bình thường: cơ thể bạn khá vừa phải và nên duy trì chế độ ăn uống lành mạnh, cộng với việc tập luyện</string>
    <string name="evaluate_bmi_warning_l">Hơi gầy: bạn cần chất dinh dưỡng đấy, hãy ăn rau, thịt đỏ nhiều vào để tạo cơ</string>
    <string name="evaluate_bmi_bad_l1">Gầy vừa: bạn nên thêm chất béo vào trong khẩu phần ăn của mình</string>
    <string name="evaluate_bmi_bad_l2">Quá gầy: bạn như một que tăm phải không, chế độ ăn uống quá nghèo nàn khiến bạn như vậy, hãy ăn ngày nhiều bữa lên và ngủ đủ giấc</string>
    <string name="evaluate_calories_bad_h2">Quá cao: bạn dư quá nhiều calo, như vậy dễ nổi mụn lắm, nên điều chỉnh lại</string>
    <string name="evaluate_calories_bad_h1">Cao: bạn nạp vào hơi nhiều so với mức tiêu thụ, hãy tập luyện gì đó để giảm xuống</string>
    <string name="evaluate_calories_warning_h">Cảnh báo: mức calo của bạn quá chênh lệch</string>
    <string name="evaluate_calories_normal">Bình thường: mức calo đủ để bạn duy trì hoạt động</string>
    <string name="evaluate_calories_good">Tốt: mức calo thích hợp để làm việc và hoạt động</string>
    <string name="evaluate_calories_warning_l">Ít: bạn nạp vào khá ít, nên bổ sung thêm chất dinh dưỡng</string>
    <string name="evaluate_calories_bad_l1">Quá ít: có vẻ như bạn không ăn uống, nên ăn gì đó ngay để tránh ngất xỉu vì thiếu năng lượng</string>
    <string name="evaluate_sleep_very_bad_h">Ngủ quên cả thời gian: ngủ quá liều có thể phá đi thời gian sinh học của bạn, hãy cố gắng dậy sớm hơn để cải thiện tinh thần</string>
    <string name="evaluate_sleep_bad_h">Ngủ quá nhiều: ngủ nhiều quá sẽ khiến bạn rất uể oải và khó hoàn thành công việc của mình, nên điều chỉnh lại</string>
    <string name="evaluate_sleep_normal">Bình thường: giấc ngủ của bạn đủ tốt để hoạt động cho 1 ngày</string>
    <string name="evaluate_sleep_warning_h">Ngủ nhiều: nên dậy sớm hơn bạn nhé, bạn nên tạo thói quen tập thể dục sáng để có tinh thần dậy sớm hơn</string>
    <string name="evaluate_sleep_warning_l">Ngủ ít: bạn dậy khá sớm so với người thường, nếu không bận gì thì hãy tặng cho mình thêm 1 – 2 tiếng nữa để ngủ nhé</string>
    <string name="evaluate_sleep_bad_l">Ngủ quá ít: nếu thấy khó ngủ hãy tránh các loại thực phẩm kích thích như cafe hay bò húc, nên mở nhạc nhẹ và tập hít thở sâu để dễ vào giấc hơn</string>
    <string name="evaluate_sleep_very_bad_l">Cần ngủ ngay: bạn nên tắt điện thoại và ngủ ngay, giờ ngủ của bạn như số lần mưa ở sa mạc vậy</string>
    <string name="evaluate_phone_very_bad_h">Sử dụng quá nhiều: nếu bạn không muốn trở thành nô lệ của chiếc điện thoại hãy tắt nó đi và trò chuyện với người thân của mình nhiều hơn</string>
    <string name="evaluate_phone_bad_h">Sử dụng nhiều: nên giảm thời gian sử dụng xuống ngay từ ngày mai và tập trung vào các hoạt động bên ngoài nhiều hơn nhé</string>
    <string name="evaluate_phone_warning_h">Cảnh báo: có vẻ như bạn phụ thuộc vào chiếc điện thoại khá nhiều, hãy tập đọc sách, sẽ rất có ích đấy</string>
    <string name="evaluate_phone_normal">Bình thường: bạn dùng với tiên lượng vừa đủ của một người</string>
    <string name="evaluate_phone_good">Tốt: bạn không bị chi phối bởi chiếc điện thoại của mình và có một cuộc sống lành mạnh, hãy tiếp tục phát huy nhé</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="evaluate_period_very_bad_h">Quá lâu: bạn nên hỏi ý kiến bác sĩ về trường hợp này</string>
    <string name="evaluate_period_bad_h">Lâu: bạn nên hỏi ý kiến người thân hoặc bác sĩ và chuẩn bị sẵn băng vệ sinh phòng trường hợp</string>
    <string name="evaluate_period_warning_h">Cảnh báo: bất thường, nên chủ động mua băng vệ sinh để phòng trường hợp cần thiết</string>
    <string name="wipe_data">Xóa dữ liệu</string>
    <string name="data">Dữ liệu</string>
    <string name="add_data_to_temp">Thêm dữ liệu vào bảng tạm</string>
    <string name="request">Yêu cầu</string>
    <string name="result">Kết quả</string>
    <string name="hint_birthday">Ngày sinh</string>
    <string name="btn_logout">Đăng xuất</string>
</resources>