<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView
        android:id="@+id/imgVwIcon"
        android:layout_marginTop="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/app_icon"/>
    <EditText
        android:id="@+id/etxtRequest"
        android:layout_below="@id/imgVwIcon"
        android:layout_above="@id/btnRequest"
        android:layout_margin="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:longClickable="false"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:ellipsize="end"
        android:lines="9"
        android:maxLines="10"
        android:padding="10dp"
        android:gravity="center"
        android:backgroundTint="@color/light_gray_2"
        android:background="@drawable/border_32_for_menu"/>
    <Button
        android:id="@+id/btnRequest"
        android:layout_marginBottom="10dp"
        android:layout_above="@id/llResult"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/request"/>
    <LinearLayout
        android:id="@+id/llResult"
        android:layout_above="@id/btnAddData"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:gravity="right"
            tools:ignore="RtlHardcoded" />
        <TextView
            android:layout_weight="1"
            android:id="@+id/txtResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="0"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_kcal"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnAddData"
        android:layout_marginBottom="10dp"
        android:layout_above="@id/llData"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/add_data_to_temp"/>
    <LinearLayout
        android:id="@+id/llData"
        android:layout_above="@id/btnWipeData"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data"
            android:gravity="right"
            tools:ignore="RtlHardcoded" />
        <TextView
            android:layout_weight="1"
            android:id="@+id/txtTempData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="0"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_kcal"/>
    </LinearLayout>
    <Button
        android:id="@+id/btnWipeData"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/wipe_data"/>
</RelativeLayout>