<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="20dp">


    <TextView
        android:id="@+id/txtVwTitle"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/llAccessInfo"
        android:layout_marginBottom="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_personal"
        android:textSize="40sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/llAccessInfo"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/light_gray_2"
        android:background="@drawable/border_16_teal_200"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:backgroundTint="@color/gray"
            android:background="@drawable/border_16_2_teal_700"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="15dp"
            tools:ignore="RtlSymmetry,UselessParent">
            <ImageView
                android:layout_alignParentStart="true"
                android:src="@drawable/id_card"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                tools:ignore="UselessParent"/>
            <TextView
                android:layout_centerInParent="true"
                android:text="@string/card_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </RelativeLayout>

        <RelativeLayout
            android:backgroundTint="@color/light_gray"
            android:background="@drawable/border_16_purple_700"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            tools:ignore="RtlSymmetry,UselessParent">
            <ImageView
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:src="@drawable/user"
                android:layout_width="30dp"
                android:layout_height="30dp"
                tools:ignore="UselessParent"/>
            <EditText
                android:id="@+id/etxtUsername"
                android:layout_centerInParent="true"
                android:hint="@string/hint_username"
                android:layout_marginStart="100dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:importantForAutofill="no"/>
        </RelativeLayout>

        <RelativeLayout
            android:backgroundTint="@color/light_gray"
            android:background="@drawable/border_16_purple_700"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            tools:ignore="RtlSymmetry,UselessParent">
            <ImageView
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:src="@drawable/padlock"
                android:layout_width="30dp"
                android:layout_height="30dp"
                tools:ignore="UselessParent"/>
            <EditText
                android:id="@+id/etxtPassword"
                android:layout_centerInParent="true"
                android:hint="@string/hint_password"
                android:layout_marginStart="100dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:importantForAutofill="no"/>
        </RelativeLayout>

        <RelativeLayout
            android:backgroundTint="@color/light_gray"
            android:background="@drawable/border_16_purple_700"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            tools:ignore="RtlSymmetry,UselessParent">
            <ImageView
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:src="@drawable/birthday_cake"
                android:layout_width="30dp"
                android:layout_height="30dp"
                tools:ignore="UselessParent"/>
            <EditText
                android:id="@+id/etxtBirthday"
                android:layout_centerInParent="true"
                android:hint="@string/hint_birthday"
                android:layout_marginStart="100dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:focusable="false"
                android:longClickable="false"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:importantForAutofill="no"/>
        </RelativeLayout>

        <RelativeLayout
            android:backgroundTint="@color/light_gray"
            android:background="@drawable/border_16_2_purple_700"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            tools:ignore="RtlSymmetry,UselessParent">
            <ImageView
                android:layout_centerInParent="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/gender"
                android:layout_width="30dp"
                android:layout_height="30dp"
                tools:ignore="UselessParent"/>
            <TextView
                android:layout_centerInParent="true"
                android:text="@string/card_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </RelativeLayout>
        <RelativeLayout
            android:backgroundTint="@color/light_gray"
            android:background="@drawable/border_16_02_purple_500"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="100dp">
            <RadioGroup
                android:id="@+id/rgGender"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="100dp">
                <RadioButton
                    android:id="@+id/rdMale"
                    android:textSize="16sp"
                    android:text="@string/male_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"/>
                <RadioButton
                    android:id="@+id/rdFemale"
                    android:textSize="16sp"
                    android:text="@string/female_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"/>
            </RadioGroup>
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/llAccessInfo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/button_gray"
        android:text="@string/button_backtoapp"
        android:textColor="@color/text_black" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnMenu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/button_red"
        android:text="@string/btn_logout"
        android:textColor="@color/white" />

</RelativeLayout>